--- a/config/nlp/BertPoint.config
+++ b/config/nlp/BertPoint.config
@@ -18,17 +18,17 @@ reader_num = 2
 [data] #data parameters
 train_dataset_type = JsonFromFiles
 train_formatter_type = BertPairText
-train_data_path = ../../examples/task2
+train_data_path = examples/task2
 train_file_list = data_sample.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = BertPairText
-valid_data_path = ../../examples/task2
+valid_data_path = examples/task2
 valid_file_list = data_sample.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = BertPairText
-test_data_path = ../../examples/task2
+test_data_path = examples/task2
 test_file_list = data_sample.json
 
 recursive = False
@@ -39,7 +39,7 @@ max_seq_length = 512
 [model] #model parameters
 model_name = BertPoint
 
-bert_path = ../../sample/pretrain_models/bert-base-uncased
+bert_path = bert-base-uncased
 
 output_dim = 2
 output_mode = classification
