--- a/config/nlp/BertPoolOutMax.config
+++ b/config/nlp/BertPoolOutMax.config
@@ -18,17 +18,17 @@ reader_num = 1
 [data] #data parameters
 train_dataset_type = JsonFromFiles
 train_formatter_type = BertDocPara
-train_data_path = ../../examples/task1
+train_data_path = examples/task1
 train_file_list = case_para_sample.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = BertDocPara
-valid_data_path = ../../examples/task1
+valid_data_path = examples/task1
 valid_file_list = case_para_sample.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = BertDocPara
-test_data_path = ../../examples/task1
+test_data_path = examples/task1
 test_file_list = case_para_sample.json
 
 recursive = False
@@ -42,7 +42,7 @@ max_para_c = 40
 max_para_q = 54
 step=3
 
-bert_path = ../../sample/pretrain_models/bert-base-uncased
+bert_path = bert-base-uncased
 
 output_dim = 2
 output_mode = classification
