--- a/config/nlp/AttenGRU.config
+++ b/config/nlp/AttenGRU.config
@@ -18,17 +18,17 @@ reader_num = 2
 [data] #data parameters
 train_dataset_type = JsonFromFiles
 train_formatter_type = AttenRNN
-train_data_path = examples/task1
+train_data_path = /content/drive/MyDrive/Bert-pli/output
 train_file_list = embedding_sample.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = AttenRNN
-valid_data_path = examples/task1
+valid_data_path = /content/drive/MyDrive/Bert-pli/output
 valid_file_list = embedding_sample.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = AttenRNN
-test_data_path = examples/task1
+test_data_path = /content/drive/MyDrive/Bert-pli/output
 test_file_list = embedding_sample.json
 
 load_into_mem = True
