--- a/config/nlp/BertPoint.config
+++ b/config/nlp/BertPoint.config
@@ -18,17 +18,17 @@ reader_num = 2
 [data] #data parameters
 train_dataset_type = JsonFromFiles
 train_formatter_type = BertPairText
-train_data_path = examples/task2
+train_data_path = /content/drive/MyDrive/Bert-pli/task2_2022_train/task2_train
 train_file_list = data_sample.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = BertPairText
-valid_data_path = examples/task2
+valid_data_path = /content/drive/MyDrive/Bert-pli/task2_2022_train/task2_train
 valid_file_list = data_sample.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = BertPairText
-test_data_path = examples/task2
+test_data_path = /content/drive/MyDrive/Bert-pli/task2_2022_train/task2_train
 test_file_list = data_sample.json
 
 recursive = False
@@ -48,13 +48,13 @@ output_mode = classification
 output_time = 1
 test_time = 1
 
-model_path = output/model
+model_path = /content/drive/MyDrive/Bert-pli/checkpoint
 model_name = task2
 
 pool_out = True
 save_as_dict = True
 
-tensorboard_path = output/tensorboard
+tensorboard_path = /content/drive/MyDrive/Bert-pli/checkpoint/tensorboard
 
 accuracy_method = SingleLabelTop1
 output_function = Basic
