--- a/config/nlp/AttenGRU.config
+++ b/config/nlp/AttenGRU.config
@@ -1,6 +1,6 @@
 [train] #train parameters
 epoch = 60
-batch_size = 2
+batch_size = 64
 
 reader_num = 4
 
@@ -11,25 +11,25 @@ step_size = 1
 lr_multiplier = 1
 
 [eval] #eval parameters
-batch_size = 2
+batch_size = 32
 
 reader_num = 2
 
 [data] #data parameters
 train_dataset_type = JsonFromFiles
 train_formatter_type = AttenRNN
-train_data_path = /content/drive/MyDrive/Bert-pli/output
-train_file_list = embedding_sample.json
+train_data_path = ./data/checkpoint
+train_file_list = embedding_train_50_525.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = AttenRNN
-valid_data_path = /content/drive/MyDrive/Bert-pli/output
-valid_file_list = embedding_sample.json
+valid_data_path = ./data/checkpoint
+valid_file_list = embedding_val_50_525.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = AttenRNN
-test_data_path = /content/drive/MyDrive/Bert-pli/output
-test_file_list = embedding_sample.json
+test_data_path = ./data/checkpoint
+test_file_list = embedding_test_50_525.json
 
 load_into_mem = True
 
@@ -52,6 +52,9 @@ dropout_fc = 0
 output_mode = classification
 label_weight = 1.0
 
+grid = True
+file_path = ./output/result_gru_525.txt
+
 [output] #output parameters
 output_time = 1
 test_time = 1
@@ -64,6 +67,6 @@ tensorboard_path = output/tensorboard
 
 accuracy_method = SingleLabelTop1
 output_function = Basic
-output_value = micro_precision,macro_precision,macro_recall,macro_f1
+output_value = micro_precision,micro_recall,micro_f1,macro_precision,macro_recall,macro_f1
 
 tqdm_ncols = 150
