--- a/config/nlp/BertPoint.config
+++ b/config/nlp/BertPoint.config
@@ -1,6 +1,6 @@
 [train] #train parameters
 epoch = 3
-batch_size = 4
+batch_size = 32
 
 reader_num = 4
 
@@ -18,18 +18,18 @@ reader_num = 2
 [data] #data parameters
 train_dataset_type = JsonFromFiles
 train_formatter_type = BertPairText
-train_data_path = /content/drive/MyDrive/Bert-pli/task2_2022_train/task2_train
-train_file_list = data_sample.json
+train_data_path = ./data/task2
+train_file_list = train_data_525.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = BertPairText
-valid_data_path = /content/drive/MyDrive/Bert-pli/task2_2022_train/task2_train
-valid_file_list = data_sample.json
+valid_data_path = ./data/task2
+valid_file_list = val_data_525.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = BertPairText
-test_data_path = /content/drive/MyDrive/Bert-pli/task2_2022_train/task2_train
-test_file_list = data_sample.json
+test_data_path = ./data/task2
+test_file_list = val_data_525.json
 
 recursive = False
 json_format = line
@@ -43,18 +43,22 @@ bert_path = bert-base-uncased
 
 output_dim = 2
 output_mode = classification
+label_weight = 1.0
+
+grid = False
+file_path = ./output/result_t2.txt
 
 [output] #output parameters
 output_time = 1
 test_time = 1
 
-model_path = /content/drive/MyDrive/Bert-pli/checkpoint
+model_path = ./data/checkpoint/model_525
 model_name = task2
 
 pool_out = True
 save_as_dict = True
 
-tensorboard_path = /content/drive/MyDrive/Bert-pli/checkpoint/tensorboard
+tensorboard_path = ./data/checkpoint/tensorboard
 
 accuracy_method = SingleLabelTop1
 output_function = Basic
