--- a/config/nlp/BertPoolOutMax.config
+++ b/config/nlp/BertPoolOutMax.config
@@ -18,18 +18,18 @@ reader_num = 1
 [data] #data parameters
 train_dataset_type = JsonFromFiles
 train_formatter_type = BertDocPara
-train_data_path = examples/task1
-train_file_list = case_para_sample.json
+train_data_path = ./data/task1
+train_file_list = test_data_50.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = BertDocPara
-valid_data_path = examples/task1
-valid_file_list = case_para_sample.json
+valid_data_path = ./data/task1
+valid_file_list = test_data_50.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = BertDocPara
-test_data_path = examples/task1
-test_file_list = case_para_sample.json
+test_data_path = ./data/task1
+test_file_list = test_data_50.json
 
 recursive = False
 json_format = line
@@ -52,10 +52,10 @@ output_time = 1
 test_time = 1
 save_step = 100
 
-model_path = output/model
+model_path = ./data/checkpoint/model
 model_name = pool_out_max
 
-tensorboard_path = output/tensorboard
+tensorboard_path = ./data/checkpoint/tensorboard
 
 accuracy_method = SingleLabelTop1
 output_function = Basic
