--- a/config/nlp/AttenLSTM.config
+++ b/config/nlp/AttenLSTM.config
@@ -18,18 +18,18 @@ reader_num = 2
 [data] #data parameters
 train_dataset_type = JsonFromFiles
 train_formatter_type = AttenRNN
-train_data_path = ../../examples/task1
-train_file_list = embedding_sample.json
+train_data_path = ./data/checkpoint
+train_file_list = embedding_train_50_525.json
 
 valid_dataset_type = JsonFromFiles
 valid_formatter_type = AttenRNN
-valid_data_path = ../../examples/task1
-valid_file_list = embedding_sample.json
+valid_data_path = ./data/checkpoint
+valid_file_list = embedding_val_50_525.json
 
 test_dataset_type = JsonFromFiles
 test_formatter_type = AttenRNN
-test_data_path = ../../examples/task1
-test_file_list = embedding_sample.json
+test_data_path = ./data/checkpoint
+test_file_list = embedding_test_50_525.json
 
 load_into_mem = True
 
@@ -52,6 +52,9 @@ dropout_fc = 0
 output_mode = classification
 label_weight = 1.0
 
+grid = True
+file_path = ./output/result_lstm_525.txt
+
 [output] #output parameters
 output_time = 1
 test_time = 1
@@ -64,6 +67,6 @@ tensorboard_path = output/tensorboard
 
 accuracy_method = SingleLabelTop1
 output_function = Basic
-output_value = micro_precision,macro_precision,macro_recall,macro_f1
+output_value = micro_precision,micro_recall,micro_f1,macro_precision,macro_recall,macro_f1
 
 tqdm_ncols = 150
